[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/gameplay/ItemBomb.gd" type="Script" id=2]
[ext_resource path="res://tres/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/items/Bomb.png" type="Texture" id=4]
[ext_resource path="res://assets/sfx/touch.ogg" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 1.1 ), Vector2( 1.1, 0.9 ), Vector2( 1, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 24.0
content_margin_right = 24.0
content_margin_top = 24.0
content_margin_bottom = 24.0
bg_color = Color( 0.988235, 0.941176, 0.862745, 1 )
corner_radius_top_left = 48
corner_radius_top_right = 48
corner_radius_bottom_right = 48
corner_radius_bottom_left = 48
shadow_color = Color( 0, 0, 0, 0.196078 )
shadow_size = 4

[node name="ItemBomb" type="TextureButton"]
pause_mode = 2
margin_left = 461.698
margin_top = 767.133
margin_right = 589.698
margin_bottom = 895.133
rect_min_size = Vector2( 128, 128 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 3 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
anims/pressed = SubResource( 1 )

[node name="DescriptionLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -405.291
margin_top = -179.165
margin_right = -11.2914
margin_bottom = -138.165
custom_styles/normal = SubResource( 2 )
custom_colors/default_color = Color( 0.556863, 0.298039, 0.235294, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="." to="." method="_on_ButtonItem_button_down"]
[connection signal="button_up" from="." to="." method="_on_ButtonItem_button_up"]
[connection signal="pressed" from="." to="." method="_on_ButtonItem_pressed"]
